@@ -8,7 +8,7 @@
   "choice.batteryAcid": "Battery Acid",
   "choice.vomit": "Vomit",
   "choice.soda": "Soda Pop",
-  "choice.beer": "Beer",
+  "choice.orangeJuice": "Orange Juice",
   "choice.coffee": "Coffee",
   "choice.spit": "Spit",
   "choice.blood": "Blood",
